--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -4,23 +4,22 @@
 
   %ul.unstyled
     %li
-      %h3 Classes Start Wednesday, January 9, at 5:30pm sharp
+      %h3 Class Starts Wednesday, January 9 at 5:30pm sharp
 
       %p
         %strong Location:
         %br
-        The Starter League
+        The Starter League, Web Development Classroom
         %br
-        Web Development Classroom
-        %br
-          = link_to "Merchandise Mart, 12th Floor (inside the 1871 Tech Center)", '#'
+        Merchandise Mart, 12th Floor (inside the 1871 Tech Center)
 
-        %br
+      %p.map
         = render 'map'
-        %p
-          %strong Directions:
-          %br
-          Take the Orleans Elevators at the west end of the building to the 12 floor.  You'll be at the entrance to the
-          = link_to "1871 Technology Center", '#'
-          (Suite 1212).  The Starter League is on your right just past the front desk.
+
+      %p
+        %strong Directions:
+        %br
+        Take the Orleans Elevators at the west end of the building to the 12 floor.  You'll be at the entrance to the
+        = link_to "1871 Technology Center", 'http://www.1871.com'
+        (Suite 1212).  The Starter League is on your right just past the front desk.
 
