--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,19 +5,14 @@
 
     %ul
       %li= link_to "Homework Repository on GitHub", homework_url
-      %li= link_to "Course Syllabus", 'syllabus.pdf'
+      %li= link_to "Course Syllabus", '#'
 
   .well
-    %h2 Contact Info
+    %h2 Instructors
     %p
       Jeff Cohen (Lecturer)
-      %br
       = mail_to "jeffcohen@cs.uchicago.edu"
     %p
       Raghu Betina
-      %br
-      = mail_to "raghu@starterleague.com"
     %p
       Brian Eng
-      %br
-      = mail_to "coolreng@gmail.com"
