--- a/app/views/pages/_top.html.haml
+++ b/app/views/pages/_top.html.haml
@@ -13,7 +13,7 @@
 
 
   .span1.pull-right
-    %a{href: 'http://github.com/cspp52553/homework', class: 'extlink', style: 'font-size: 48px'}
+    %a{href: 'http://github.com/cspp52553', class: 'extlink', style: 'font-size: 48px'}
       %i.icon-github
 
 
