Add git cheat sheet

--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -7,6 +7,7 @@
       %li= link_to "Homework for Week 1", homework_url
       %li= link_to "Q&A via Piazza", piazza_url
       %li= link_to "Course Syllabus", syllabus_path, target: '_blank'
+      %li= link_to "Git Cheat Sheet", "/git_sheet.pdf"
       %li= link_to "HTML & CSS Guide", "http://learn.shayhowe.com"
       %li= link_to "Online Ruby Docs", "http://www.ruby-doc.org/core-1.9.3"
       %li= link_to "Ruby on Rails Guides", "http://guides.rubyonrails.org"
