--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -11,6 +11,7 @@
       %li= link_to "HTML & CSS Guide", "http://learn.shayhowe.com"
       %li= link_to "Online Ruby Docs", "http://www.ruby-doc.org/core-1.9.3"
       %li= link_to "Ruby on Rails Guides", "http://guides.rubyonrails.org"
+      %li= link_to "Course Notebook", "/notebook.pdf"
 
   .well
     %h2 Instructors
