News from Week 1

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -20,6 +20,11 @@
     line-height: 24px;
   }
 }
+li.news_item {
+  border-bottom: solid 10px #CCC;
+  padding-bottom: 12px;
+}
+
 .extlink {
   color: #000;
   text-decoration: none;
