--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -3,7 +3,53 @@
     News
 
   %ul.unstyled
-    %li
+    %li.news_item
+      %h3 Important Announcements from Week 1
+
+      %p
+        Hey everyone!  THANK YOU SO MUCH for being ontime to class tonight.  I will always start at 5:30pm sharp just like tonight.
+
+      %p
+        Do not miss a class unless you're sick. We don't have a textbook to accompany the class, and so it can be
+        %em very hard
+        to catch up.
+
+      %p
+        Here are some important things to keep in mind:
+
+      %p
+        %strong OFFICE HOURS THIS WEEK
+
+      %p
+        Raghu: This Friday, 5pm @ Starter League Dev Classroom.
+        (Come early at 4pm for free pizza and beer at the 1871 Happy Hour in the Event Space).
+
+      %p Jeff: (Covering for Brian this week): Monday, 2pm-4pm @ Starter League
+      %p Jeff: Wednesday, 3:15pm-5:15pm @ Starter League
+
+      %p
+        %strong IMPORTANT INFO FOR GETTING THE HOMEWORK DONE
+
+      %p
+        Setup your environment.
+
+        %p
+          Windows:
+          = link_to "http://railsinstaller.org"
+        %p
+          Mac:
+          = link_to "http://www.moncefbelyamani.com/how-to-install-xcode-homebrew-git-rvm-ruby-on-mac/"
+          and then
+          = link_to "http://railsapps.github.com/installing-rails.html"
+        %p
+          %strong If you have any problems, come to Raghu's office hours this Friday!
+
+      %p
+        Finally, check out the Resources sidebar for more links and resources mentioned during class.
+
+      %p Good luck with the homework. See you next week!
+
+    %li.news_item
       %h3 Class Starts Wednesday, January 9 at 5:30pm sharp
 
       %p
