--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -12,6 +12,9 @@
       %li= link_to "Online Ruby Docs", "http://www.ruby-doc.org/core-1.9.3"
       %li= link_to "Ruby on Rails Guides", "http://guides.rubyonrails.org"
       %li= link_to "Course Notebook", "/notebook.pdf"
+      %li= link_to "Hartl book", "Hartl book: http://ruby.railstutorial.org/ruby-on-rails-tutorial-book"
+      %li= link_to "BetterSnapTool (easy, $)", "https://itunes.apple.com/us/app/bettersnaptool/id417375580"
+      %li= link_to "Slate (guru, free)", "http://thume.ca/howto/2012/11/19/using-slate/"
 
   .well
     %h2 Instructors
