--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,6 +5,7 @@
 
     %ul
       %li= link_to "Homework for Week 1", homework_url(1)
+      %li= link_to "Slides from Week 1", "/slides-week1.pdf"
       %li= link_to "Q&A via Piazza", piazza_url
       %li= link_to "Course Syllabus", syllabus_path, target: '_blank'
       %li= link_to "Git Cheat Sheet", "/git_sheet.pdf"
