update news item

--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -10,6 +10,9 @@
         Hey everyone!  THANK YOU SO MUCH for being ontime to class tonight.  I will always start at 5:30pm sharp just like tonight.
 
       %p
+        The Resources sidebar has links and resources mentioned during class.
+
+      %p
         Do not miss a class unless you're sick. We don't have a textbook to accompany the class, and so it can be
         %em very hard
         to catch up.
@@ -43,9 +46,6 @@
           = link_to "http://railsapps.github.com/installing-rails.html"
         %p
           %strong If you have any problems, come to Raghu's office hours this Friday!
-
-      %p
-        Finally, check out the Resources sidebar for more links and resources mentioned during class.
 
       %p Good luck with the homework. See you next week!
 
