--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -38,12 +38,12 @@
 
         %p
           Windows:
-          = link_to "http://railsinstaller.org"
+          = link_to "http://railsinstaller.org", "http://railsinstaller.org"
         %p
           Mac:
-          = link_to "http://www.moncefbelyamani.com/how-to-install-xcode-homebrew-git-rvm-ruby-on-mac/"
+          = link_to "http://www.moncefbelyamani.com/how-to-install-xcode-homebrew-git-rvm-ruby-on-mac/", "http://www.moncefbelyamani.com/how-to-install-xcode-homebrew-git-rvm-ruby-on-mac/"
           and then
-          = link_to "http://railsapps.github.com/installing-rails.html"
+          = link_to "http://railsapps.github.com/installing-rails.html", "http://railsapps.github.com/installing-rails.html"
         %p
           %strong If you have any problems, come to Raghu's office hours this Friday!
 
