--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -1,11 +1,15 @@
-.span4
+.span4.resources
   .well
     %h2
       Resources
 
+    %h3 class content
     %ul
-      %li= link_to "Homework for Week 1", homework_url(1)
+      %li= link_to "Code and Homework from Week 1", homework_url(1)
       %li= link_to "Slides from Week 1", "/slides-week1.pdf"
+
+    %h3 important resources
+    %ul
       %li= link_to "Q&A via Piazza", piazza_url
       %li= link_to "Course Syllabus", syllabus_path, target: '_blank'
       %li= link_to "Git Cheat Sheet", "/git_sheet.pdf"
@@ -13,6 +17,8 @@
       %li= link_to "Online Ruby Docs", "http://www.ruby-doc.org/core-1.9.3"
       %li= link_to "Ruby on Rails Guides", "http://guides.rubyonrails.org"
       %li= link_to "Course Notebook", "/notebook.pdf"
+    %h3 for fun &amp; enrichment
+    %ul
       %li= link_to "Hartl book", "Hartl book: http://ruby.railstutorial.org/ruby-on-rails-tutorial-book"
       %li= link_to "BetterSnapTool (easy, $)", "https://itunes.apple.com/us/app/bettersnaptool/id417375580"
       %li= link_to "Slate (guru, free)", "http://thume.ca/howto/2012/11/19/using-slate/"
