Updates for week 2

--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -4,6 +4,32 @@
 
   %ul.unstyled
     %li.news_item
+      %h3 Important Announcements from Week 2
+
+      %p
+        Always check the Resources sidebar for links and resources mentioned during class.  There's a
+        = link_to "beginner-level HTML/CSS guide", "http://learn.shayhowe.com/html-css/"
+        that can be helpful if you're new to HTML, as well as a
+        = link_to "complete walkthrough of the Facebook API exercise", "/facebook-api.pdf"
+        that Raghu covered.
+
+      %p
+        Don't forget to try
+        = link_to "Piazza", piazza_url
+        for any questions throughout the week.
+
+      %p
+        %strong OFFICE HOURS THIS WEEK
+
+      %p
+        Raghu: Thursday, 3pm @ Stuart Cafe on campus.
+        = link_to "Here's a map to Stuart Cafe.", "http://maps.uchicago.edu/mainquad/stuart.html"
+
+      %p Brian: Monday, 2pm-4pm @ Starter League (Design Classroom Office)
+      %p Jeff: Wednesday, 3:15pm-5:15pm @ (Design Classroom Office)
+
+
+    %li.news_item
       %h3 Important Announcements from Week 1
 
       %p
