--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,6 +5,8 @@
 
     %h3 class content
     %ul
+      %li= link_to "Code and Homework from Week 2", homework_url(2)
+      %li= link_to "Slides from Week 2", "/slides-week2.pdf"
       %li= link_to "Code and Homework from Week 1", homework_url(1)
       %li= link_to "Slides from Week 1", "/slides-week1.pdf"
 
@@ -13,12 +15,13 @@
       %li= link_to "Q&A via Piazza", piazza_url
       %li= link_to "Course Syllabus", syllabus_path, target: '_blank'
       %li= link_to "Git Cheat Sheet", "/git_sheet.pdf"
-      %li= link_to "HTML & CSS Guide", "http://learn.shayhowe.com"
+      %li= link_to "HTML & CSS Guide", "http://learn.shayhowe.com/html-css/"
       %li= link_to "Online Ruby Docs", "http://www.ruby-doc.org/core-1.9.3"
       %li= link_to "Ruby on Rails Guides", "http://guides.rubyonrails.org"
       %li= link_to "Course Notebook", "/notebook.pdf"
     %h3 for fun &amp; enrichment
     %ul
+      %li= link_to "The Programmable Web", "http://www.programmableweb.com/apis/directory/1?sort=mashups"
       %li= link_to "Hartl book", "Hartl book: http://ruby.railstutorial.org/ruby-on-rails-tutorial-book"
       %li= link_to "BetterSnapTool (easy, $)", "https://itunes.apple.com/us/app/bettersnaptool/id417375580"
       %li= link_to "Slate (guru, free)", "http://thume.ca/howto/2012/11/19/using-slate/"
