--- a/app/views/cards/deal.html.haml
+++ b/app/views/cards/deal.html.haml
@@ -1,6 +1,6 @@
 #poker
   .row
-    .span12
+    .span12.page-header
       %h1 Poker Cards
       %p= link_to 'Refresh this page to deal a new hand.', poker_url
 
