--- a/app/views/craps/show.html.haml
+++ b/app/views/craps/show.html.haml
@@ -34,7 +34,7 @@
           %li
             Anything else becomes your
             %em point.
-            Roll your point again before a 7 or 11 and you win.
+            Roll your point again before a 7 and you win.
         %h2= button_to "Roll to start the game!", dice_roll_path, class: 'btn btn-success btn-large'
 
 
