--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -4,6 +4,37 @@
 
   %ul.unstyled
     %li.news_item
+      %h3 Important Announcements from Week 3
+
+      %p
+        Here are the apps you need to recreate as part of the homework:
+
+      %ul
+        %li= link_to "Rock, Paper, Scissors", rps_path
+        %li= link_to "Poker Cards", poker_path
+        %li= link_to "Dice Game", dice_path
+
+      %p
+        Always check the Resources sidebar for links and resources mentioned during class.  There's a
+        = link_to "beginner-level HTML/CSS guide", "http://learn.shayhowe.com/html-css/"
+        that can be helpful if you're new to HTML, and don't forget the
+        = link_to "Rails Guides.", "http://guides.rubyonrails.org"
+
+      %p
+        Don't forget to try
+        = link_to "Piazza", piazza_url
+        for any questions throughout the week.
+
+      %p
+        %strong OFFICE HOURS THIS WEEK
+
+      %p
+        Raghu: Thursday, 2pm @ Stuart Cafe on campus.
+        = link_to "Here's a map to Stuart Cafe.", "http://maps.uchicago.edu/mainquad/stuart.html"
+
+      %p Brian: Monday, 2pm-4pm @ Starter League (Design Classroom)
+      %p Jeff: Wednesday, 3:15pm-5:15pm @ (Design Classroom)
+    %li.news_item
       %h3 Important Announcements from Week 2
 
       %p
