--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,6 +5,8 @@
 
     %h3 class content
     %ul
+      %li= link_to "Code and Homework from Week 3", homework_url(3)
+      %li= link_to "Slides from Week 3", "/slides-week3.pdf"
       %li= link_to "Code and Homework from Week 2", homework_url(2)
       %li= link_to "Slides from Week 2", "/slides-week2.pdf"
       %li= link_to "Code and Homework from Week 1", homework_url(1)
