Nicer office hours list

--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -27,12 +27,13 @@
       %p
         %strong OFFICE HOURS THIS WEEK
 
-      %p
-        Raghu: Thursday, 2pm @ Stuart Cafe on campus.
-        = link_to "Here's a map to Stuart Cafe.", "http://maps.uchicago.edu/mainquad/stuart.html"
+      %ul
+        %li
+          Raghu: Thursday, 2pm @ Stuart Cafe on campus.
+          = link_to "Here's a map to Stuart Cafe.", "http://maps.uchicago.edu/mainquad/stuart.html"
 
-      %p Brian: Monday, 2pm-4pm @ Starter League (Design Classroom)
-      %p Jeff: Wednesday, 3:15pm-5:15pm @ (Design Classroom)
+        %li Brian: Monday, 2pm-4pm @ Starter League (Design Classroom)
+        %li Jeff: Wednesday, 3:15pm-5:15pm @ (Design Classroom)
     %li.news_item
       %h3 Important Announcements from Week 2
 
