update office hours

--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -29,7 +29,7 @@
 
       %ul
         %li
-          Raghu: Thursday, 2pm @ Stuart Cafe on campus.
+          Raghu: Thursday, 2pm-4pm @ Stuart Cafe on campus.
           = link_to "Here's a map to Stuart Cafe.", "http://maps.uchicago.edu/mainquad/stuart.html"
 
         %li Brian: Monday, 2pm-4pm @ Starter League (Design Classroom)
