--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -14,6 +14,7 @@
 
     %h3 important resources
     %ul
+      %li= link_to "RCAV and Model Basics PDF", "/rcav-model-basics.pdf"
       %li= link_to "Q&A via Piazza", piazza_url
       %li= link_to "Course Syllabus", syllabus_path, target: '_blank'
       %li= link_to "Git Cheat Sheet", "/git_sheet.pdf"
