Upgrade Rails and updates for week 4

--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -7,6 +7,33 @@
       %h3 Important Announcements from Week 3
 
       %p
+        %strong No new homework this week.
+        We'll probably end up with just 4 assignments this quarter.
+
+      %p
+        New resource in the sidebar,
+        = link_to "Quick Review for Weeks 1-4", "/weeks1-4.pdf"
+        , includes some cheat sheets on how to get started adding models to your application.  It is not a complete review but has some hints to help you remember how to get started.
+
+      %p
+        %strong MIDTERM WEEK 6
+
+      %p The last half of class will be the midterm.  A combination of short-answer or multiple choice questions, plus some code reading challenges.  More info at the next class.
+
+      %p
+        %strong OFFICE HOURS THIS WEEK
+      %ul
+        %li Raghu: Friday, 5pm-6pm @1871
+        %li Raghu: Tuesday, TBA @Stuart Cafe
+        %li Brian: Monday, 2pm-4pm @1871
+        %li Jeff: Wednesday, 3pm-4pm @1871
+
+
+
+    %li.news_item
+      %h3 Important Announcements from Week 3
+
+      %p
         Here are the apps you need to recreate as part of the homework:
         %ul
           %li= link_to "Rock, Paper, Scissors", rps_path
