Add final project pdf, and finalize 1-N example

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,6 +18,6 @@
   <%= link_to @event.venue.name, venue_path(@event.venue) %>
 </p>
 
-<%= render 'venues/map', venue: @event.venue  %>
+<%#= render 'venues/map', venue: @event.venue  %>
 
 
