--- a/app/views/venues/show.html.haml
+++ b/app/views/venues/show.html.haml
@@ -7,6 +7,6 @@
   %b Address:
   = @venue.address
 
-= render 'map', venue: @venue
+/ = render 'map', venue: @venue
 
 = link_to 'Edit', edit_venue_path(@venue)
