updates for week 5

--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -4,7 +4,41 @@
 
   %ul.unstyled
     %li.news_item
-      %h3 Important Announcements from Week 3
+      %h3 Important Announcements from Week 5
+
+      %p
+        %strong New homework this week:
+        = link_to "Recreate this one-to-many example", events_url
+        as best you can.  Exact requirements are in the
+        = link_to "README", "#"
+        in the Github repository.  Put your app under the
+        %strong homework
+        folder in your week5 fork.
+
+
+      %p
+        New resource in the sidebar:
+        = link_to "Model Associations Summary Sheets", "/model_associations.pdf"
+        and don't forget about
+        = link_to "Rails Guides on Model Validations", "http://guides.rubyonrails.org/active_record_validations_callbacks.html#the-object-life-cycle"
+
+      %p
+        %strong MIDTERM NEXT WEEK
+
+      %p The last half of class will be the midterm.  A combination of short-answer or multiple choice questions, plus some code reading challenges.
+
+      %p The midterm covers up to and including many-to-many associations, so be sure to study the code we wrote in class in the week5 repository.
+
+      %p
+        %strong OFFICE HOURS THIS WEEK
+      %ul
+        %li Raghu: Thursday, 4-6pm @Stuart Cafe
+        %li Brian: Monday, 2pm-4pm @1871 Design Classroom
+        %li Jeff: Wednesday, 3pm-4pm @1871 Design Classroom
+
+
+    %li.news_item
+      %h3 Important Announcements from Week 4
 
       %p
         %strong No new homework this week.
