--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,7 +5,8 @@
 
     %h3 class content
     %ul
-      %li= link_to "Quick Review for Weeks 1-4", "/weeks1-4.pdf"
+      %li= link_to "Slides from Week 5", "/slides-week5.pdf"
+      %li= link_to "Code and Homework from Week 5", homework_url(5)
       %li= link_to "Slides from Week 4", "/slides-week4.pdf"
       %li= link_to "Code and Homework from Week 3", homework_url(3)
       %li= link_to "Slides from Week 3", "/slides-week3.pdf"
@@ -16,6 +17,9 @@
 
     %h3 important resources
     %ul
+      %li= link_to "Model Associations Summary Sheets", "/model_associations.pdf"
+      %li= link_to "Final Project Assignment", "/final_project.pdf"
+      %li= link_to "Quick Review for Weeks 1-4", "/weeks1-4.pdf"
       %li= link_to "RCAV and Model Basics PDF", "/rcav-model-basics.pdf"
       %li= link_to "Q&A via Piazza", piazza_url
       %li= link_to "Course Syllabus", syllabus_path, target: '_blank'
