Add link to migrations guide

--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -19,8 +19,10 @@
       %p
         New resource in the sidebar:
         = link_to "Model Associations Summary Sheets", "/model_associations.pdf"
-        and don't forget about
+        and don't forget about the
         = link_to "Rails Guides on Model Validations", "http://guides.rubyonrails.org/active_record_validations_callbacks.html#the-object-life-cycle"
+        and
+        = link_to "Database Migrations", "http://guides.rubyonrails.org/migrations.html"
 
       %p
         %strong MIDTERM NEXT WEEK
