--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -16,7 +16,12 @@
   <tr>
     <td><%= link_to event.title, event %></td>
     <td><%= event.happening_on.strftime("%B %e at %r") %></td>
-    <td><%= link_to event.venue.name, venue_url(event.venue) %></td>
+    <td>
+      <% if event.venue %>
+        <%= link_to event.venue.name, venue_url(event.venue) %></td>
+      <% else %>
+        <%= "unknown" %>
+      <% end %>
     <td><%= link_to 'Edit', edit_event_path(event) %></td>
     <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
