--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,6 +5,8 @@
 
     %h3 class content
     %ul
+      %li= link_to "Slides from Week 6", "/slides-week6.pdf"
+      %li= link_to "Code and Homework from Week 6", homework_url(6)
       %li= link_to "Slides from Week 5", "/slides-week5.pdf"
       %li= link_to "Code and Homework from Week 5", homework_url(5)
       %li= link_to "Slides from Week 4", "/slides-week4.pdf"
