Updates for week 7 and 8

--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -4,6 +4,26 @@
 
   %ul.unstyled
     %li.news_item
+      %h3 Important Announcements from Week 8
+
+      %p
+        %strong No homework.  Have fun on your projects!
+
+      %p
+        The
+        %strong= link_to "midterm answer key", "/midterm_key.pdf"
+        and
+        %strong= link_to "midterm debugging code", "/debug_code.pdf"
+        are now available.  Note that for the short-answer section (first page) the answers shown are just one example of many possible correct answers.
+
+      %p
+        %strong OFFICE HOURS THIS WEEK
+      %ul
+        %li Raghu: Thursday, 2pm-4pm @1871 Stuart Cafe
+        %li Brian: Monday, 2pm-4pm @1871 Design Classroom
+        %li Jeff: Wednesday, 3pm-4pm @1871 Design Classroom
+
+    %li.news_item
       %h3 Important Announcements from Week 6
 
       %p
