--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,6 +5,10 @@
 
     %h3 class content
     %ul
+      %li= link_to "Slides from Week 8", "/slides-week8.pdf"
+      %li= link_to "Code from Week 8", homework_url(8)
+      %li= link_to "Slides from Week 7", "/slides-week7.pdf"
+      %li= link_to "Code from Week 7", homework_url(7)
       %li= link_to "Slides from Week 6", "/slides-week6.pdf"
       %li= link_to "Code and Homework from Week 6", homework_url(6)
       %li= link_to "Slides from Week 5", "/slides-week5.pdf"
