--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -4,6 +4,23 @@
 
   %ul.unstyled
     %li.news_item
+      %h3 Important Announcements from Week 9
+
+      %p
+        %strong No homework.  Have fun on your projects!
+
+      %p
+        The
+        %strong= link_to "final project grading requirements", "/final_project.pdf"
+        have been updated to make the Elective portion less burdensome.
+
+      %p
+        %strong OFFICE HOURS THIS WEEK
+      %ul
+        %li Raghu: Thursday, 2pm-4pm @1871 Stuart Cafe
+        %li Brian: Monday, 2pm-4pm @1871 Design Classroom
+        %li Jeff: Wednesday, 3pm-4pm @1871 Design Classroom
+    %li.news_item
       %h3 Important Announcements from Week 8
 
       %p
