--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,6 +5,8 @@
 
     %h3 class content
     %ul
+      %li= link_to "Slides from Week 9", "/slides-week9.pdf"
+      %li= link_to "Code from Week 9", homework_url(9)
       %li= link_to "Slides from Week 8", "/slides-week8.pdf"
       %li= link_to "Code from Week 8", homework_url(8)
       %li= link_to "Slides from Week 7", "/slides-week7.pdf"
