Add js sheets to sidebar

--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -25,6 +25,7 @@
 
     %h3 important resources
     %ul
+      %li= link_to "Javascript, jQuery, and Ajax Cheat Sheets", "/javascript.pdf"
       %li= link_to "Model Associations Summary Sheets", "/model_associations.pdf"
       %li= link_to "Final Project Assignment", "/final_project.pdf"
       %li= link_to "Quick Review for Weeks 1-4", "/weeks1-4.pdf"
