--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,6 +5,7 @@
 
     %h3 class content
     %ul
+      %li= link_to "Slides from Week 10", "/slides-week10.pdf"
       %li= link_to "Slides from Week 9", "/slides-week9.pdf"
       %li= link_to "Code from Week 9", homework_url(9)
       %li= link_to "Slides from Week 8", "/slides-week8.pdf"
@@ -25,6 +26,7 @@
 
     %h3 important resources
     %ul
+      %li= link_to "Sign in with Twitter", "/oauth_twitter.pdf"
       %li= link_to "Javascript, jQuery, and Ajax Cheat Sheets", "/javascript.pdf"
       %li= link_to "Model Associations Summary Sheets", "/model_associations.pdf"
       %li= link_to "Final Project Assignment", "/final_project.pdf"
