--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -4,6 +4,32 @@
 
   %ul.unstyled
     %li.news_item
+      %h3 Important Announcements from Week 10
+
+      %p
+        %strong Make sure you send me the following no later than Wednesday, March 26, 8:30pm:
+
+      %li Your name and your partner's name
+      %li Link to your Github Repo
+      %li Link to your live site
+      %li Brief paragraph on what your app is about / which template you chose
+
+      %p
+        %strong New resource in the sidebar on how to sign in with Twitter.
+
+      %p
+        Just a reminder, here is the link to the
+        %strong= link_to "final project grading requirements", "/final_project.pdf"
+        which have been updated to make the Elective portion less burdensome.
+
+      %p
+        %strong OFFICE HOURS THIS WEEK
+      %ul
+        %li Brian: Monday, 2pm-4pm @1871 Design Classroom
+        %li Raghu: Tuesday, 2pm-4pm @1871 Stuart Cafe
+        %li Jeff: Wednesday, 3pm-4pm @1871 Design Classroom
+
+    %li.news_item
       %h3 Important Announcements from Week 9
 
       %p
