--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -16,7 +16,9 @@
         %li Brief paragraph on what your app is about / which template you chose
 
       %p
-        %strong New resource in the sidebar on how to sign in with Twitter.
+        Check out the new
+        = link_to "how to sign in with Twitter", "/oauth_twitter.pdf"
+        sheet in the sidebar.
 
       %p
         Just a reminder, here is the link to the
