--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -2,6 +2,13 @@
   %ul.unstyled
 
     %li.news_item
+      %h4.alert
+        WINTER 2013 STUDENTS:
+        %p
+          You can access all news and resources from Winter Quarter by using the
+          = link_to "Winter 2013", winter2013_url
+          link in the navbar.
+
       %h3 Class Starts Monday, April 1 at 5:30pm sharp
 
       %p
