--- a/app/views/pages/_winter2013_news.html.haml
+++ b/app/views/pages/_winter2013_news.html.haml
@@ -40,7 +40,7 @@
 
       %p
         The
-        %strong= link_to "final project grading requirements", "/final_project.pdf"
+        %strong= link_to "final project grading requirements", handout_url(:winter2013, 'final_project')
         have been updated to make the Elective portion less burdensome.
 
       %p
@@ -56,9 +56,9 @@
 
       %p
         The
-        %strong= link_to "midterm answer key", "/midterm_key.pdf"
+        %strong= link_to "midterm answer key (removed)", '#'
         and
-        %strong= link_to "midterm debugging code", "/debug_code.pdf"
+        %strong= link_to "midterm debugging code", handout_url(:winter2013, 'debug_code')
         are now available.  Note that for the short-answer section (first page) the answers shown are just one example of many possible correct answers.
 
       %p
@@ -76,7 +76,7 @@
 
       %p
         The
-        %strong= link_to "midterm answer key", "/midterm_key.pdf"
+        %strong= link_to "midterm answer key (removed)", '#'
         is now available.  Note that for the short-answer section (first page) the answers shown are just one example of many possible correct answers.
 
       %p
