--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,7 +5,7 @@
 
     %h3 class content
     %ul
-      %li= link_to "Slides from Week 1", "/slides-week1.pdf"
+      %li= link_to "Slides from Week 1", slides_url(:spring2013, 1)
 
     %h3 important resources
     %ul
@@ -16,7 +16,7 @@
       / %li= link_to "Quick Review for Weeks 1-4", "/weeks1-4.pdf"
       / %li= link_to "RCAV and Model Basics PDF", "/rcav-model-basics.pdf"
       / %li= link_to "Q&A via Piazza", piazza_url
-      %li= link_to "Course Syllabus", syllabus_path, target: '_blank'
+      %li= link_to "Course Syllabus", syllabus_path(:spring2013), target: '_blank'
       %li= link_to "Git Cheat Sheet", "/git_sheet.pdf"
       %li= link_to "HTML & CSS Guide", "http://learn.shayhowe.com/html-css/"
       %li= link_to "Online Ruby Docs", "http://www.ruby-doc.org/core-1.9.3"
