--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -2,29 +2,13 @@
   %ul.unstyled
 
     %li.news_item
-      %h4.alert
-        WINTER 2013 STUDENTS:
+      %h3
+        First Day of Class: Thursday, April 4 at 1:30pm
+        %strong SHARP
+
+      .alert.alert-error
+        / %button(type="button" class="close" data-dismiss="alert") &times;
+        %h3 IMPORTANT
         %p
-          You can access all news and resources from Winter Quarter by using the
-          = link_to "Winter 2013", winter2013_url
-          link in the navbar.
-
-      %h3 Class Starts Monday, April 1 at 5:30pm sharp
-
-      %p
-        %strong Location:
-        %br
-        The Starter League, Web Development Classroom
-        %br
-        Merchandise Mart, 12th Floor (inside the 1871 Tech Center)
-
-      %p.map
-        = render 'map'
-
-      %p
-        %strong Directions:
-        %br
-        Take the Orleans Elevators at the west end of the building to the 12 floor.  You'll be at the entrance to the
-        = link_to "1871 Technology Center", 'http://www.1871.com'
-        (Suite 1212).  The Starter League is on your right just past the front desk.
+          %strong Laptops will be provided.  Personal laptops and cellphones must be put away during class.
 
