--- a/app/views/pages/_top.html.haml
+++ b/app/views/pages/_top.html.haml
@@ -1,26 +1,18 @@
 .page-header
   .row
     .span3
-      = link_to image_tag('uc.jpg'), root_url
+      = link_to image_tag('kellogg.png'), root_url
 
     .span7
       %h1
-        = link_to 'CSPP 52553 Web Development', root_url
+        = link_to 'ENTR-925 Startup Programming and Management', root_url
 
       %p.lead
-        Spring 2013
-
-
-
+        Spring 2013,
+        Jacobson Room 166
 
     .span1.pull-right
-      %a{href: 'http://github.com/cspp52553', class: 'extlink', style: 'font-size: 48px'}
+      %a{href: 'http://github.com/entr925', class: 'extlink', style: 'font-size: 48px'}
         %i.icon-github
-  .row
-    .span6
-      = link_to "Spring 2013", root_url
-      |
-      = link_to "Winter 2013", winter2013_path
-
 
   .clearfix
