Add Raghu's email address link to sidebar

--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -35,4 +35,5 @@
       = mail_to "jeffcohen@cs.uchicago.edu", "Jeff Cohen"
       (Lecturer)
     %p
-      Raghu Betina (TA)
+      = mail_to 'raghu@starterleague.com', 'Raghu Betina'
+      (TA)
