--- a/app/views/pages/_top.html.haml
+++ b/app/views/pages/_top.html.haml
@@ -9,7 +9,7 @@
 
       %p.lead
         Spring 2013,
-        Jacobson Room 166
+        Jacobs Center, Room 166
 
     .span1.pull-right
       %a{href: 'http://github.com/entr925', class: 'extlink', style: 'font-size: 48px'}
