--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -6,9 +6,18 @@
         First Day of Class: Thursday, April 4 at 1:30pm
         %strong SHARP
 
-      .alert.alert-error
-        / %button(type="button" class="close" data-dismiss="alert") &times;
-        %h3 IMPORTANT
-        %p
-          %strong Laptops will be provided.  Personal laptops and cellphones must be put away during class.
+      %p
+        %strong Welcome to ENTR-925 Startup Programming and Management!
+
+      %p Prior to the first class, you're encouraged to try to to install Ruby and Rails onto your laptop so that you can do the homework this week.
+
+      %p= link_to "Click here for my guide to installing Rails (both Mac and Windows).", "http://www.jeffcohenonline.com/installing-rails"
+      %p
+        Installing Ruby and Rails can be tricky, so if you're not feeling confident or if you run into any trouble, bring your laptop with you and
+        %strong join us immediately after the first class, from 4:30pm - 5:45pm,
+        and we'll help you get setup.
+
+      %p (Note, however, that personal laptops must be put away during class itself.)
+
+      %p See you Thursday!
 
