--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -17,6 +17,8 @@
       / %li= link_to "RCAV and Model Basics PDF", "/rcav-model-basics.pdf"
       / %li= link_to "Q&A via Piazza", piazza_url
       %li= link_to "Course Syllabus", syllabus_path(:spring2013), target: '_blank'
+      %li= link_to "How to Install Rails", "http://www.jeffcohenonline.com/installing-rails"
+      %li= link_to "Configuring Sublime Text", "http://www.jeffcohenonline.com/setting-up-sublime"
       %li= link_to "Git Cheat Sheet", "/git_sheet.pdf"
       %li= link_to "HTML & CSS Guide", "http://learn.shayhowe.com/html-css/"
       %li= link_to "Online Ruby Docs", "http://www.ruby-doc.org/core-1.9.3"
