--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,4 +1,11 @@
 = render 'top'
+.row
+  .span12
+    .alert.alert-info
+      %button(type="button" class="close" data-dismiss="alert") &times;
+      %h3 IMPORTANT
+      %p
+        %strong Laptops will be provided.  Personal laptops and cellphones must be put away during class.
 
 .row
   = render 'news'
