--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -27,7 +27,7 @@
     %h3 for fun &amp; enrichment
     %ul
       %li= link_to "The Programmable Web", "http://www.programmableweb.com/apis/directory/1?sort=mashups"
-      %li= link_to "Hartl book", "Hartl book: http://ruby.railstutorial.org/ruby-on-rails-tutorial-book"
+      %li= link_to "Hartl book", "http://ruby.railstutorial.org/ruby-on-rails-tutorial-book"
       %li= link_to "BetterSnapTool (easy, $)", "https://itunes.apple.com/us/app/bettersnaptool/id417375580"
       %li= link_to "Slate (guru, free)", "http://thume.ca/howto/2012/11/19/using-slate/"
 
