--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -2,6 +2,26 @@
   %ul.unstyled
 
     %li.news_item
+      %h3 Week 1 Recap
+
+      %p Please do these things this week:
+
+      %ol
+        %li Get a free Github.com account.
+        %li
+          Create a "fork" of
+          = link_to "Week1", "http://github.com/entr925/week1"
+          \.  Read the homework.pdf guide that's there if you need help on how to fork the project.
+        %li
+          Setup Ruby and Rails on your personal laptop if you haven't already.
+          Check out the
+          = link_to "How to Install Rails", "http://www.jeffcohenonline.com/installing-rails"
+          guide that's also accessible in the sidebar.
+        %li
+          %strong Turn In Your Homework By Friday, April 12th, 11:59pm.
+        %li I recommend getting a copy of "Learn to Program", 2nd Edition, by Chris Pine.
+
+    %li.news_item
       %h3
         First Day of Class: Thursday, April 4 at 1:30pm
         %strong SHARP
